COD-98: fix: adjust styles to prevent text overflow in title of card

--- a/styles.css
+++ b/styles.css
@@ -54,9 +54,9 @@ body {
   margin-bottom: 0.5rem;
   font-size: 1.5rem;
   overflow: hidden;
+  white-space: nowrap;
   text-overflow: ellipsis;
-  max-width: 100%;
-  max-height: 4rem;
+  max-width: 20rem;
 }
 
 .header-location {
@@ -64,10 +64,6 @@ body {
   font-weight: 700;
   font-size: 0.85rem;
   margin-bottom: 0.5rem;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  max-width: 100%;
-  max-height: 3rem;
 }
 
 .socials-btn-wrapper {
@@ -82,10 +78,6 @@ body {
   margin-bottom: 1.25rem;
   font-size: 0.875rem;
   opacity: 0.6;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  max-width: 100%;
-  max-height: 5rem;
 }
 
 .socials-btn-wrapper > button {
@@ -103,6 +95,7 @@ body {
   background-color: var(--green);
   color: var(--off-black);
 }
+
 @media only screen and (max-width: 600px) {
   .card {
     width: 90%;
